Add Builder and Proxy pattern

--- a/DesignPatternConsole/DesignPatternConsole.csproj
+++ b/DesignPatternConsole/DesignPatternConsole.csproj
@@ -8,7 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\BuilderPattern\BuilderPattern.csproj" />
+    <ProjectReference Include="..\..\ProxyPattern\ProxyPattern.csproj" />
     <ProjectReference Include="..\..\SingletonPattern\SingletonPattern.csproj" />
+    <ProjectReference Include="..\FactoryPattern\FactoryPattern.csproj" />
   </ItemGroup>
 
 </Project>
